Fix padding at top of text pages on mobile layouts.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -89,6 +89,10 @@ ul {
     max-width: 100% !important;
     padding: 0.75rem 0.25rem 0.75rem 0.25rem;
   }
+
+  .body-wrapper {
+    padding-top: 1rem;
+  }
 }
 
 /* Contact Form ============================================================= */
